--- a/style.css
+++ b/style.css
@@ -1,91 +1,64 @@
 /* import font */
 
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Hubot+Sans:ital,wght@0,200..900;1,200..900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+
 
 body{
-    font-family: "Ubuntu", sans-serif;
-    min-height: 100vh;
+    font-family: "Hubot Sans", sans-serif;
+    font-weight: 200;
+}
+
+.icon-list{
+    list-style: none;
+    padding: 0;
     margin: 0;
-    min-height: 100hv;
 }
 
-.column-2{
-    float: left;
-    width: 65%;
-    align-items: center;
-    text-align: center;
-    background-color: #f0f0f0;
-    color: black;
-    min-height: 700px;
-}
-
-.column-1{
-    float: left;
-    width: 35%;
-    align-items: center;
-    text-align: center;
-    background-color: black;
-    color: white;
-}
-
-.row::after{
-    content: "";
-    display: table;
-    clear: both;
-}
-
-.phone,.mail,.location{
+.icon-list li {
     display: flex;
-    justify-content: center;
-}
-.phone_icon{
-    width: 25px;
-    height: 25px;
-    margin-top: 15px;
+    align-items: center;
+    gap: 8px;
+    justify-self: center;
 }
 
-.mail_icon{
-    width: 25px;
-    height: 25px;
-    margin-top: 15px;
+.icon-list li svg {
+    flex-shrink: 0;
 }
 
-.location_icon{
-    width: 25px;
-    height: 25px;
-    margin-top: 15px;
+.name{
+    font-weight: 100;
 }
-div.con{
+
+hr{
+    border: 0;
+    height: 3px;
+    background-color: black;
+}
+
+.hobby {
+    list-style-type: none;
+    padding: 0;
     text-align: center;
-    margin-bottom: 0%;
 }
 
-ul.myUL{
-    display: inline-block;
-    text-align: left;
-    margin-top: 0%;
+.hobby li{
+    display: block;
+    margin: 0 10px;
 }
 
-div.conteiner-1{
-    min-height: 100vh;
+.skill-icon-list{
+    list-style: none;
+    padding: 0;
+    margin: 0;
 }
 
-.me{
-    border-radius: 50%;
-    width: 100px;
-    height: 100px;
+.skill-icon-list li {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    justify-self: center;
 }
 
-.box{
-    padding: 20;
-    width: 50;
-    height: 50;
-    border: solid 1px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.7);
-    text-align: left;
-    background-color: white;
-}
-
-.text-1{
-    margin: 5px;
+.skill-icon-list li svg {
+    flex-shrink: 0;
 }
